# dagster-pyiceberg-example-postgres

./: .gitignore  .gitmodules  .justfile  .pre-commit-config.yaml  .pyiceberg.yaml  LICENSE.txt  README.md  dagster.yaml  pyproject.toml  read_catalog.ipynb
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
docs/: assets.excalidraw
notebooks/: iceberg_catalog.ipynb
scripts/: create_catalog_namespace.py  create_landing_zone_bucket.py
src/dagster_pyiceberg_example/: __init__.py  partitions.py
src/dagster_pyiceberg_example/IO/: __init__.py  resource_luchtmeetnet.py  resource_rate_limiter.py  resource_redis.py
src/dagster_pyiceberg_example/_luchtmeetnet/: __init__.py  api.py  const.py
src/dagster_pyiceberg_example/assets/: __init__.py  const.py  project.py  utils.py
src/dagster_pyiceberg_example/assets/dbt/: dbt_project.yml  profiles.yml
src/dagster_pyiceberg_example/assets/dbt/models/: sources.yaml
src/dagster_pyiceberg_example/assets/dbt/models/marts/: stations.sql
src/dagster_pyiceberg_example/assets/dbt/models/staging/: stg_measurements.sql  stg_test.sql
src/dagster_pyiceberg_example/assets/dbt/seeds/: components.csv  stations.csv
src/dagster_pyiceberg_example/static/: stations.json
tests/: test_assets.py  test_ddb.py
