[project]
name = "dagster-pyiceberg-example"
version = "0.0.0"
description = "Example project for using dagster-pyiceberg. See <https://jasperhg90.github.io/dagster-pyiceberg/>"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagit>=1.9.0",
    "dagster>=1.9.0",
    "dagster-pyiceberg[polars]",
    "pyiceberg[daft,s3fs,sql-postgres]",
    "httpx>=0.27.2",
    "coolname>=2.2.0",
    "pydantic>=2.9.2",
    "pyrate-limiter>=3.7.0",
    "redis>=5.2.0",
    "dagster-aws>=0.25.0",
    "dagster-dbt>=0.25.0",
    "dbt-duckdb>=1.9.0",
    "dbt-core>=1.8.8",
    "pandas>=2.2.3",
]

[tool.uv.sources]
dagster-pyiceberg = { url = "https://github.com/JasperHG90/dagster-pyiceberg/releases/download/v0.1.1/dagster_pyiceberg-0.1.1-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
]

[tool.black]
line-length = 88
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.cache
    | \.venv
    | _build
    | build
    | dist
  )
)
'''

[tool.isort]
profile = "black"
extend_skip = [".notebooks", ".nox", ".venv"]

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true

[tool.bandit]
skips = ['B101']

[tool.ruff]
lint.ignore = ["E501"]
extend-exclude = [
  "__pycache__",
]

[tool.pytest.ini_options]
cache_dir = "/home/vscode/workspace/.cache/pytest"
